--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
             </select>
             <input type="date">
             <button>Tambah tugas</button>
+        </div>
+        <div class="filters">
+        <button>Semua</button>
+        <button>Aktif</button>
+        <button>Hari Ini</button>
+        <button>Prioritas Tinggi</button>
+        <button class="delete">Hapus Selesai</button>
+        <div class="tasks">
+            <p>Tidak memiliki tugas</p>
+            <small>Tambahkan tugas baru</small>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
